Rolled out a method that solves the viewport height on iOS *and* is CSS-compatible

--- a/lapsa.css
+++ b/lapsa.css
@@ -1,3 +1,8 @@
+:root
+{
+	--safe-vh: 1vh;
+}
+
 html, body
 {
 	overflow-y: hidden;
@@ -9,8 +14,7 @@ html, body
 
 body
 {
-	/* Stupid */
-	height: 100vh;
+	height: calc(100 * var(--safe-vh));
 }
 
 #lapsa-slide-container
@@ -85,89 +89,6 @@ body
 	color: rgb(64, 64, 64);
 }
 
-.centered p
-{
-	text-align: center !important;
-}
-
-.left-text p
-{
-	width: 50% !important;
-	margin-left: 0 !important;
-}
-
-.footer-text
-{
-	width: 100%;
-	position: absolute;
-	bottom: 2vw;
-}
-
-.footer-text p
-{
-	margin-bottom: 0 !important;
-}
-
-
-
-#lapsa-slide-container .slide .wilson-applet-canvas-container
-{
-	margin-top: 0 !important;
-	margin-bottom: 0 !important;
-}
-
-#lapsa-slide-container .slide canvas
-{
-	border-radius: 1.25vw;
-}
-
-#lapsa-slide-container .medium-canvas canvas
-{
-	width: 40.8vw;
-	height: 40.8vw;
-}
-
-#lapsa-slide-container .medium-canvas #canvas-bundle
-{
-	position: absolute;
-	
-	right: 2.5vw;
-	bottom: 2.5vw;
-}
-
-#lapsa-slide-container .large-canvas canvas
-{
-	width: 45vw;
-	height: 45vw;
-}
-
-#lapsa-slide-container .large-canvas #canvas-bundle
-{
-	position: absolute;
-	
-	left: 25vw;
-	bottom: 2.5vw;
-}
-
-#lapsa-slide-container .slide.full-canvas
-{
-	background-color: rgb(0, 0, 0);
-}
-
-#lapsa-slide-container .full-canvas canvas
-{
-	width: 55.625vw;
-	height: 55.625vw;
-}
-
-#lapsa-slide-container .full-canvas #canvas-bundle
-{
-	position: absolute;
-	
-	left: calc((95vw - 55.625vw) / 2);
-	bottom: 0;
-}
-
 
 
 #lapsa-slide-shelf-container
@@ -175,7 +96,7 @@ body
 	position: fixed;
 	
 	width: 125px;
-	height: 100vh;
+	height: calc(100 * var(--safe-vh));
 	
 	bottom: 0;
 	left: 0;
@@ -225,7 +146,7 @@ body
 #lapsa-slide-shelf.lapsa-hover .shelf-button:hover
 {
 	background-color: rgb(192, 192, 192);
-	cursor: pointer
+	cursor: pointer;
 }
 
 #lapsa-bottom-margin
@@ -243,87 +164,32 @@ body
 {
 	#lapsa-slide-container .slide
 	{
-		height: calc(50.625vh * 152 / 89);
-		width: calc(90vh * 152 / 89);
+		height: calc(50.625 * var(--safe-vh) * 152 / 89);
+		width: calc(90 * var(--safe-vh) * 152 / 89);
 		
-		border-radius: calc(2.5vh * 152 / 89);
+		border-radius: calc(2.5 * var(--safe-vh) * 152 / 89);
 		
-		box-shadow: 0px 0px calc(1vh * 152 / 89) 0px rgb(127, 127, 127);
+		box-shadow: 0px 0px calc(var(--safe-vh) * 152 / 89) 0px rgb(127, 127, 127);
 		
-		padding: calc(2.5vh * 152 / 89);
+		padding: calc(2.5 * var(--safe-vh) * 152 / 89);
 		
-		left: calc((100vw - 95vh * 152 / 89) / 2);
+		left: calc((100vw - 95 * var(--safe-vh) * 152 / 89) / 2);
 		
-		font-size: calc(3vh * 152 / 89);	
+		font-size: calc(3 * var(--safe-vh) * 152 / 89);	
 	}
 	
 	#lapsa-slide-container.lapsa-hover.lapsa-table-view .slide:hover
 	{
-		box-shadow: 0px 0px calc(4vh * 152 / 89) 0px rgb(127, 127, 127);
-		cursor: pointer;
+		box-shadow: 0px 0px calc(4 * var(--safe-vh) * 152 / 89) 0px rgb(127, 127, 127);
 	}
 	
 	#lapsa-slide-container .slide h1, #lapsa-slide-container .slide h2, #lapsa-slide-container .slide p
 	{
-		padding-bottom: calc(2vh * 152 / 89);
+		padding-bottom: calc(2 * var(--safe-vh) * 152 / 89);
 	}
 
 	#lapsa-slide-container .slide h1
 	{
-		margin-top: calc(-1vh * 152 / 89);
-	}
-	
-	#lapsa-slide-container .footer-text
-	{
-		bottom: calc(2vh * 152 / 89);
-	}
-	
-	
-	
-	#lapsa-slide-container .slide canvas
-	{
-		border-radius: calc(1.25vh * 152 / 89);
-	}
-	
-	#lapsa-slide-container .medium-canvas canvas
-	{	
-		width: calc(40.8vh * 152 / 89);
-		height: calc(40.8vh * 152 / 89);
-	}
-
-	#lapsa-slide-container .medium-canvas #canvas-bundle
-	{
-		position: absolute;
-		
-		right: calc(2.5vh * 152 / 89);
-		bottom: calc(2.5vh * 152 / 89);
-	}
-
-	#lapsa-slide-container .large-canvas canvas
-	{
-		width: calc(45vh * 152 / 89);
-		height: calc(45vh * 152 / 89);
-	}
-
-	#lapsa-slide-container .large-canvas #canvas-bundle
-	{
-		position: absolute;
-		
-		left: calc(25vh * 152 / 89);
-		bottom: calc(2.5vh * 152 / 89);
-	}
-	
-	#lapsa-slide-container .full-canvas canvas
-	{
-		width: calc(55.625vh * 152 / 89);
-		height: calc(55.625vh * 152 / 89);
-	}
-
-	#lapsa-slide-container .full-canvas #canvas-bundle
-	{
-		position: absolute;
-		
-		left: calc(((95vh - 55.625vh) * 152 / 89) / 2);
-		bottom: 0;
+		margin-top: calc(-1 * var(--safe-vh) * 152 / 89);
 	}
 }
